# Procturing-Realtime

./: .env  .gitignore  README.md  audio_handler.py  check_proctoring_import.py  entrypoint.py  explore_deepgram.py  eye_tracker.py  head_pose_estimation.py  live_diarization.py  main.py  mediapipe_handler.py  person_and_phone.py  pyproject.toml  run_pipeline.sh  test.py  verify_audio.py
app/: main.py
app/services/: audio_handler.py  procturing.py  session_manager.py  violation_tracker.py
app/services/vision/: eye_tracker.py  face_landmarks.py  face_spoofing.py  head_pose_estimation.py  mediapipe_handler.py  person_and_phone.py
