[project]
name = "proctoring-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py==2.1.0",
    "annotated-types==0.7.0",
    "anyio==4.4.0",
    "astunparse==1.6.3",
    "blinker==1.8.2",
    "certifi==2024.8.30",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "exceptiongroup==1.2.2",
    "fastapi==0.114.2",
    "flask==3.0.3",
    "flask-swagger-ui==4.11.1",
    "flatbuffers==24.3.25",
    "fonttools==4.53.1",
    "gast==0.6.0",
    "google-pasta==0.2.0",
    "grpcio==1.66.1",
    "h11==0.14.0",
    "h5py==3.11.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "joblib==1.4.2",
    "keras==3.5.0",
    "kiwisolver==1.4.7",
    "libclang==18.1.1",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "matplotlib==3.9.2",
    "mdurl==0.1.2",
    "mediapipe>=0.10.21",
    "ml-dtypes==0.4.1",
    "namex==0.0.8",
    "numpy==1.26.4",
    "opencv-python==4.6.0.66",
    "opt-einsum==3.3.0",
    "optree==0.12.1",
    "packaging==24.1",
    "pillow==10.4.0",
    "protobuf==4.25.4",
    "pydantic==2.9.1",
    "pydantic-core==2.23.3",
    "pygments==2.18.0",
    "pyparsing==3.1.4",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.3",
    "rich==13.8.1",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "six==1.16.0",
    "sniffio==1.3.1",
    "starlette==0.38.5",
    "tensorboard==2.17.1",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.17.0",
    "tensorflow-io-gcs-filesystem==0.37.1",
    "termcolor==2.4.0",
    "threadpoolctl==3.5.0",
    "typing-extensions==4.12.2",
    "ultralytics>=8.3.251",
    "urllib3==2.2.3",
    "uvicorn==0.30.6",
    "werkzeug==3.0.4",
    "wget==3.2",
    "wrapt==1.16.0",
]
